@@ -1,5 +1,12 @@
 2002-10-31  Akim Demaille  <akim@epita.fr>
 
+	* tests/location.test (Makefile.am): Strengthen.
+	* lib/Automake/Channels.pm (_print_message): Be sure to flush
+	$partial when the message is output.
+	Thanks to Alexandre Duret-Lutz.
+
+2002-10-31  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&read_am_file): Use $last_where to register the
 	_first_ line of a variable definition as location instead of the
 	last one.
